# android-eframe

./: AndroidManifest.xml  Cargo.toml  build.rs  flake.nix
nix/: align-apk.nix  cargo-apk-10.nix  create-apk.nix  debug-keystore.nix  generate-manifest.nix  sign-apk.nix
src/: lib.rs
