[package]
name = "glit"
version = "0.1.3"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Examples for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
rust-version = "1.70.0"
edition = "2021"
publish = false

[dependencies]
egui = { git = "https://github.com/AndriBaal/egui", branch = "winit-0.30"}
egui-winit = { git = "https://github.com/AndriBaal/egui", branch = "winit-0.30"}
egui_demo_lib = { git = "https://github.com/AndriBaal/egui", branch = "winit-0.30"}
egui_glow = { git = "https://github.com/AndriBaal/egui", branch = "winit-0.30", features = ["winit"]}
glow = "0.13.1"
glutin = { git = "https://github.com/rust-windowing/glutin", default-features = false }
glutin-winit = { git = "https://github.com/rust-windowing/glutin" }
raw-window-handle = "0.6"
winit = { version = "0.30.0", default-features = false, features = ["rwh_06", "android-native-activity"] }

[lib]
crate-type = ["cdylib"]
