[package]
name = "glit"
version = "0.1.3"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Examples for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
rust-version = "1.70.0"
edition = "2021"
publish = false

[dependencies]
android_logger = "0.14.1"
eframe = { git = "https://github.com/AndriBaal/egui", branch = "winit-0.30", features = ["android-native-activity"]}
egui_demo_lib = { git = "https://github.com/AndriBaal/egui", branch = "winit-0.30"}
log = "0.4.21"
winit = "0.30.3"

[lib]
crate-type = ["cdylib"]
