[package]
name = "android-eframe"
version = "0.1.0"
edition = "2021"

[dependencies]
android_logger = "0.14.1"
eframe = { git = "https://github.com/AndriBaal/egui", branch = "winit-0.30", features = ["android-native-activity"]}
egui_demo_lib = { git = "https://github.com/AndriBaal/egui", branch = "winit-0.30"}
log = "0.4.21"
winit = "0.30.3"

[lib]
crate-type = ["cdylib"]
